# katflix-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/models/: fdb_model.rs  mod.rs
videos/: mov.html  video.html  video.js
