[package]
name = "katflix-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros"] }
tokio-stream = "0.1.6"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
futures-util = "0.3.1"
foundationdb = { version = "0.5.1", path = "/usr/home/basilisk/foundationdb-rs/foundationdb"}
warp = "0.3.2"
console = "0.15"
lazy_static = "1.4.0"
rand = "0.8.4"
bytes = "1.1.0"

# Serde
serde = "1.0.133"
serde_json = "1.0.74"
serde_derive = "1.0.133"